templates/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/managed-by: __MANAGER__
