templates/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
