templates/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP_NAME__
  namespace: __NAMESPACE__
  annotations: {}
spec:
  ingressClassName: __INGRESS_CLASS__
  rules:
    - host: __HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __SERVICE_NAME__
                port:
                  number: __SERVICE_PORT__
